<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color">

    <ImageView
        android:id="@+id/viewMovieImage"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp300"
        android:contentDescription="@string/image_item"
        android:scaleType="centerInside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/viewMovieTitle"
        style="@style/Headline01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:textSize="@dimen/sp26"
        app:layout_constraintEnd_toStartOf="@+id/loadingView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewMovieImage"
        tools:text="@string/tools_item_title" />


    <TextView
        android:id="@+id/viewShortDescription"
        style="@style/Headline01_Alternative_Color"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:maxLines="3"
        android:textSize="@dimen/sp20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewMovieTitle"
        tools:text="@string/tools_item_short_description" />

    <TextView
        android:id="@+id/view_full_description"
        style="@style/Default_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewShortDescription"
        tools:text="@string/tools_item_description" />

    <ProgressBar
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/default_progressbar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>