<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp6"
    app:cardCornerRadius="@dimen/dp8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_background_color">

        <ImageView
            android:id="@+id/movieImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp150"
            android:contentDescription="@string/image_item"
            android:paddingHorizontal="@dimen/dp6"
            android:paddingTop="@dimen/dp8"
            android:paddingBottom="@dimen/dp6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/viewMovieName"
            style="@style/Headline01"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp8"
            android:layout_marginTop="@dimen/dp4"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:minLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieImage"
            tools:text="@string/tools_item_title" />

        <TextView
            android:id="@+id/viewMovieDescription"
            style="@style/Default_Text"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:minLines="2"
            app:layout_constraintEnd_toEndOf="@id/viewMovieName"
            app:layout_constraintStart_toStartOf="@id/viewMovieName"
            app:layout_constraintTop_toBottomOf="@id/viewMovieName"
            tools:text="@string/tools_item_description" />

        <Button
            android:id="@+id/enterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8"
            android:backgroundTint="@color/teal_700"
            android:text="@string/tools_item_button"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewMovieDescription"
            tools:ignore="DuplicateClickableBoundsCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>